# course-scheduler-uc-core

./: .gitignore  README.md  pyproject.toml  pytest.ini
course_scheduler/: scraper_run.py
course_scheduler/models/: course.py  schedule.py
course_scheduler/planner/: auto_scheduler.py  conflict_detector.py  schedule_generator.py
course_scheduler/scraper/: api_client.py  get_courses.py  get_schedule.py  get_sections.py
course_scheduler/utils/: data_utils.py  time_utils.py
tests/: test_conflicts.py  test_data_utils.py  test_time_utils.py
